cmake_minimum_required(VERSION 3.12)

set(NAME TEST_PICO_FREERTOS)
include(pico_sdk_import.cmake)
project(test_pico_freertos C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_BOARD pico_w)

set(FREERTOS_KERNEL_PATH "/home/fraser/rp_pico/freertos/FreeRTOS-Kernel")
include_directories(.)
pico_sdk_init()
include(FreeRTOS_Kernel_import.cmake)
add_executable(${NAME} test.c)
set_source_files_properties(test.c PROPERTIES COMPILE_FLAGS "-O2 -fstack-protector")
target_link_libraries(${NAME} pico_stdlib pico_cyw43_arch_lwip_threadsafe_background FreeRTOS-Kernel-Heap4 hardware_i2c hardware_adc)
pico_enable_stdio_usb(${NAME} 1)
pico_enable_stdio_uart(${NAME} 0)
pico_add_extra_outputs(${NAME})
